--- a/style3.css
+++ b/style3.css
@@ -113,3 +113,27 @@ form{
     font-size: 22px;
     margin-top: 25px;
 }
+
+.button
+{
+  margin-top: 0px;
+  margin-left: 600px;  
+  position: relative;
+  top:72%;
+}
+
+.btn{
+    border: 1px solid white;
+    padding: 10px 30px;
+    color: white;
+    text-decoration: none;
+    margin-right: 5px;
+    font-size: 15px;
+    text-transform: uppercase;
+    
+}
+
+.btn1:hover
+{
+    background-color: orange;
+}
