--- a/style2.css
+++ b/style2.css
@@ -4,7 +4,7 @@
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("coding1.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("https://media.giphy.com/media/go5Iy1VIpVwqI/giphy.gif");
     background-color: #cccccc;
     background-position: center;
     height: 100vh;
