--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .main-nav{
     float: right;
     list-style: none;
-    margin-top: 0px;
-    margin-right: 30px;
+    margin-top: 10px;
+    margin-right: 20px;
 }
 .main-nav li{
     display: inline-block;
@@ -37,14 +37,17 @@
 }
 
 .logo img{
-    width: 120px;
+    width: 170px;
     height : auto;
     float: left;
+    margin-top: -30px;
+    margin-left: -35px;
 }
 
 body{
     margin-top: 30px;
     height: 100vh;
+    background-color: #cccccc;
     background-size: cover;
     font-family: monospace;
 }
