--- a/style1.css
+++ b/style1.css
@@ -10,8 +10,8 @@ header{
 .main-nav{
     float: right;
     list-style: none;
-    margin-top: 35px;
-    margin-right: 30px;
+    margin-top: 30px;
+    margin-right: 20px;
 }
 .main-nav li{
     display: inline-block;
@@ -39,9 +39,11 @@ header{
 }
 
 .logo img{
-    width: 110px;
+    width: 170px;
     height : auto;
     float: left;
+    margin-top: -25px;
+    margin-left: -35px;
 }
 
 body{
