--- a/style2.css
+++ b/style2.css
@@ -3,15 +3,11 @@
     padding:0;
 }
 
-header{
-
-}
-
 .main-nav{
     float: right;
     list-style: none;
-    margin-top: 10px;
-    margin-right: 30px;
+    margin-top: 0px;
+    margin-right: 0px;
 }
 .main-nav li{
     display: inline-block;
@@ -40,17 +36,17 @@ header{
 }
 
 .logo img{
-    width: 100px;
+    width: 170px;
     height : auto;
     float: left;
+    margin-top: -30px;
+    margin-left: -35px;
 }
 
 body{
     margin-top: 50px;
     height: 100vh;
     background-size: cover;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("coding1.jpg");
-    background-color: #cccccc;
     background-position: center;
     font-family: monospace;
 }
@@ -66,8 +62,8 @@ h1
  font-size: 40px;
  font-family: cursive;
  text-transform: capitalize;
- margin-top: -20px; 
- margin-left: 110px;  
+ margin-top: -10px; 
+ margin-right: 170px;  
 }
 
 p
@@ -92,23 +88,37 @@ img{
 form{
 
     text-align: center;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 50px 50px;
     display: block;
     float: center;
     margin-left: 20px;
     color: white;
     font-size: 27px;
-    line-height: 30px;
+    line-height: 50px;
     margin-top: 120px;
     
 }
 
 .submit
 {
-    font-size: 22px;
-    margin-top: 20px;
+    font-size: 15px;
+    margin-top: 25px;
+    box-sizing: border-box;
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+    padding: 10px 28px;
+    text-decoration: none;
+    margin-left: 0px;
+    font-family: "roboto", sans-serif;
+    text-transform: uppercase;
 }
 
+.submit:hover
+{
+    background-color: orange;
+}
 
 .button
 {
