--- a/style3.css
+++ b/style3.css
@@ -6,8 +6,8 @@
 .main-nav{
     float: right;
     list-style: none;
-    margin-top: 30px;
-    margin-right: 30px;
+    margin-top: 25px;
+    margin-right: 18px;
 }
 .main-nav li{
     display: inline-block;
@@ -35,9 +35,11 @@
 }
 
 .logo img{
-    width: 100px;
+    width: 220px;
     height : auto;
     float: left;
+    margin-top: -40px;
+    margin-left: -20px;
 }
 
 body{
@@ -53,19 +55,15 @@ body{
     margin: auto;
 }
 
-img{
-    float: right;
-    margin-top: 0px;
-    max-width: 400px;
-}
-
 h2
 {
-margin-top: 10px;
+margin-top: 70px;
+font-family: Arial, Helvetica, sans-serif;
+margin-right: 240px;
 margin-bottom: 5px;
-color: white;
+color: orange;
 text-align: center;
-font-size: 40px;
+font-size: 50px;
 text-transform: uppercase;
 }
 p 
@@ -73,11 +71,11 @@ p
 {
 color: white;
 text-align: center;
-font-size: 20px;
+font-size: 22px;
 padding: 10px 10px;
 line-height: 37px;
 position: relative;
-top:8px;
+top:3px;
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 0px;
 display: block;
@@ -87,22 +85,35 @@ display: block;
 form{
 
     text-align: center;
-    line-height: 35px;
-    font-family: monospace;
+    padding: 10px 10px;
+    line-height: 45px;
+    font-family: Arial, Helvetica, sans-serif;
     display: block;
     float: center;
     margin-right: 30px;
     color: white;
-    font-size: 20px;
-    margin-top: 30px;
+    font-size: 25px;
+    margin-top: 60px;
 }
 
 .submit
 {
-    font-size: 22px;
+    font-size: 15px;
     margin-top: 25px;
+    box-sizing: border-box;
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+    padding: 10px 28px;
+    text-decoration: none;
+    margin-left: 70px;
+    font-family: "roboto", sans-serif;
+    text-transform: uppercase;
 }
-
+.submit:hover
+{
+    background-color: orange;
+}
 .button
 {
   margin-top: 0px;
