--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@
     margin-top: -30px;
     margin-left: -35px;
 }
+.transbox{
+
+    margin: 30px;
+    margin-top: 20px;
+    height: 100vh;
+    background-size: cover;
+    opacity: 0.6;
+    background-color: black;
+    filter: alpha(opacity=60);
+}
 
 body{
     margin-top: 30px;
