--- a/style1.css
+++ b/style1.css
@@ -2,14 +2,13 @@
     margin:0;
     padding:0;
 }
-.timer
-{ float :right;
-  margin-bottom: 50px;
-    
+
+header{
    
     
 }
 .main-nav{
+    
     float: right;
     list-style: none;
     margin-top: 30px;
@@ -73,6 +72,18 @@ h1
 }
 
 p
+{
+color: white;
+text-align: left;
+font-size: 22px;
+padding: 10px 10px;
+line-height: 37px;
+font-family: Arial, Helvetica, sans-serif;
+margin-left: 50px;
+margin-top: 30px;
+}
+
+.list
 {
 color: white;
 text-align: left;
