--- a/style2.css
+++ b/style2.css
@@ -43,6 +43,7 @@
     margin-left: -35px;
 }
 
+
 body{
     margin-top: 50px;
     height: 100vh;
@@ -50,6 +51,7 @@ body{
     background-position: center;
     font-family: monospace;
 }
+
 .row{
     max-width: 1200px;
     margin: auto;
@@ -57,6 +59,7 @@ body{
 
 h1
 {
+ font-weight: bold;
  color: beige;
  text-align: center;
  font-size: 40px;
