--- a/style3.css
+++ b/style3.css
@@ -41,12 +41,21 @@
     margin-top: -40px;
     margin-left: -20px;
 }
+.transbox{
+
+    margin: 20px;
+    margin-top: 0px;
+    opacity: 0.6;
+    background-color: black;
+    filter: alpha(opacity=60);
+}
 
 body{
     margin-top: 10px;
     background-repeat:no-repeat;
     background-position: center;
     height: 100vh;
+
     background-size: cover;
     font-family: monospace;
 }
@@ -61,7 +70,7 @@ margin-top: 70px;
 font-family: Arial, Helvetica, sans-serif;
 margin-right: 240px;
 margin-bottom: 5px;
-color: orange;
+color: gold;
 text-align: center;
 font-size: 50px;
 text-transform: uppercase;
