--- a/end.css
+++ b/end.css
@@ -1,23 +1,18 @@
 {
-    margin:0;
-    padding:0;
+    margin:10;
+    padding:10;
 }
 
-header{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("treasure.jpg");
-    background-color: #cccccc;
-    background-position: center;
-    height: 100vh;
-    background-size: cover;
-}
+
 .main-nav{
     float: right;
     list-style: none;
-    margin-top: 30px;
-    margin-right: 30px;
+    margin-top: 10px;
+    margin-right: 20px;
 }
 .main-nav li{
     display: inline-block;
+    
 }
 
 .main-nav li a
@@ -37,17 +32,33 @@ header{
 
 .main-nav li a:hover
 {
-    border: 2px solid white;
     background-color: orange;
+    border: 2px solid white;
 }
 
 .logo img{
-    width: 100px;
+    width: 200px;
     height : auto;
     float: left;
+    margin-top: -38px;
+    margin-left: -40px;
+}
+.transbox{
+
+    margin: 30px;
+    margin-top: 20px;
+    height: 100vh;
+    background-size: cover;
+    opacity: 0.6;
+    background-color: black;
+    filter: alpha(opacity=60);
 }
 
 body{
+    margin-top: 30px;
+    height: 100vh;
+    background-color: #cccccc;
+    background-size: cover;
     font-family: monospace;
 }
 .row{
@@ -67,8 +78,8 @@ h1
  text-align: center;
  font-size: 50px;
  text-transform: uppercase;
- margin-top: 275px; 
- margin-left: 110px;  
+ margin-top: 200px; 
+ margin-left: 80px;  
 }
 
 .button
