--- a/login test.css
+++ b/login test.css
@@ -93,9 +93,11 @@ h2
 
 .loginBox input[type="text"], .loginBox input[type="password"]
 {
-	border: 1px solid black;
-	border-bottom: 1px solid #fff;
+	
+	
 	background: transparent;
+	border: none;
+	border-bottom: 1px solid #fff;
 	outline:none;
 	height:40px;
 	color:#fff;
@@ -114,9 +116,9 @@ h2
 	background: transparent;
 	cursor:pointer;
     box-sizing: border-box;
-    border: none;
+    border: 1px solid white;
 	padding: 10px 28px;
-	margin-top: 10px;
+	margin-top: 40px;
     text-decoration: none;
 
 }
@@ -125,6 +127,7 @@ h2
 .submit:hover
 {
 	background: blue;
+	border: black;
 }
  
  
@@ -134,6 +137,7 @@ h2
 {
 	color: #fff;
 	font-size:14px;
+	border: 1px solid black;
 	font-weight:bold;
 } 
 
