--- a/style1.css
+++ b/style1.css
@@ -4,8 +4,10 @@
 }
 
 header{
-   
-    
+    background-position: center;
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("rules 1.jpg");
+    height: 150vh;
+    background-size: cover;
 }
 .main-nav{
     
@@ -22,14 +24,15 @@ header{
 {
     color: white;
     text-decoration :none;
-    padding: 5px 20px;
+    padding: 7px 26px;
     font-family: "roboto", sans-serif;
     font-size: 17px;
+    margin-right: 12px;
 }
 
 .main-nav li.active a
 {
-    border: 2px solid white;
+    border: 1px solid white;
 
 }
 
@@ -40,18 +43,16 @@ header{
 }
 
 .logo img{
-    width: 170px;
+    width: 220px;
     height : auto;
     float: left;
-    margin-top: -25px;
-    margin-left: -35px;
+    margin-top: -40px;
+    margin-left: -45px;
 }
 
 body{
     font-family: monospace;
-    background-position: center;
-    height: 100vh;
-    background-size: cover;
+    
 }
 
 .row{
@@ -62,52 +63,54 @@ body{
 
 h1
 {
+
  color: beige;
- text-align: center;
- font-size: 50px;
+ font-size: 42px;
  font-family: cursive;
  text-transform: capitalize;
  margin-top: 100px; 
- margin-left: 110px;  
+ margin-left: 400px;  
 }
 
 p
 {
 color: white;
 text-align: left;
-font-size: 22px;
+font-size: 20px;
 padding: 10px 10px;
 line-height: 37px;
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 50px;
-margin-top: 30px;
+margin-top: 10px;
 }
 
 .list
 {
 color: white;
+margin-right: 50px;
 text-align: left;
-font-size: 22px;
-padding: 10px 10px;
+font-size:18px;
+padding: 30px 30px;
 line-height: 37px;
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 50px;
-margin-top: 30px;
+margin-top:   0px;
 }
 
 .button{   
-  margin-top: 30px;
+  margin-top: 0px;
   margin-left: 600px;
   position: relative;
   top: 30%; 
-
+  
 }
 
 .btn{
     border: 1px solid white;
-    padding: 10px 30px;
+    padding: 15px 38px;
     color: white;
     text-decoration: none;
+    background-color: transparent;
     margin-right: 5px;
     font-size: 15px;
 
