--- a/style2.css
+++ b/style2.css
@@ -36,13 +36,20 @@
 }
 
 .logo img{
-    width: 170px;
+    width: 210px;
     height : auto;
     float: left;
-    margin-top: -30px;
-    margin-left: -35px;
+    margin-top: -42px;
+    margin-left: -44px;
 }
+.transbox{
 
+    margin: 20px;
+    margin-top: 0px;
+    opacity: 0.6;
+    background-color: black;
+    filter: alpha(opacity=60);
+}
 
 body{
     margin-top: 50px;
@@ -69,16 +76,28 @@ h1
  margin-right: 170px;  
 }
 
+.grid
+{
+    position: relative;
+   background-color: blue;
+   border: 1px solid black;
+   width: 200px;
+   height: 200px;
+   margin: auto;
+   margin-right: 100px;
+}
+
 p
 {
 color: white;
 text-align: left;
 font-size: 18px;
-padding: 10px 10px;
-line-height: 37px;
+padding: 15px 15px;
+line-height: 42px;
 font-family: Arial, Helvetica, sans-serif;
-margin-left: 60px;
-margin-top: 0px;
+margin-left: 50px;
+margin-right: 60px;
+background: rgba(0,0, 0, 0.6);
 }
 
 
@@ -92,15 +111,32 @@ form{
 
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 50px 50px;
+    padding: 30px 30px;
     display: block;
     float: center;
     margin-left: 20px;
     color: white;
     font-size: 27px;
     line-height: 50px;
-    margin-top: 120px;
-    
+    margin-top: 10px;
+}
+
+form input[type=text]
+{
+
+   width: 20%;
+   padding: 6px 16px;
+   margin: 8px 0;
+   box-sizing: border-box;
+   border: 1px solid white;
+   border-radius: 4px;
+   background-color: transparent;
+   background: rgba(0,0, 0, 0.6);
+}
+
+form input[type=text]:focus
+{
+    background-color: beige;
 }
 
 .submit
@@ -121,6 +157,7 @@ form{
 .submit:hover
 {
     background-color: orange;
+
 }
 
 .button
