--- a/style3.css
+++ b/style3.css
@@ -55,7 +55,6 @@ body{
     background-repeat:no-repeat;
     background-position: center;
     height: 100vh;
-
     background-size: cover;
     font-family: monospace;
 }
@@ -85,6 +84,7 @@ padding: 10px 10px;
 line-height: 37px;
 position: relative;
 top:3px;
+background: rgba(0, 0, 0, 0.6);
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 0px;
 display: block;
@@ -103,6 +103,24 @@ form{
     color: white;
     font-size: 25px;
     margin-top: 60px;
+}
+
+form input[type=text]
+{
+
+   width: 20%;
+   padding: 6px 16px;
+   margin: 8px 0;
+   box-sizing: border-box;
+   border: 1px solid white;
+   border-radius: 4px;
+   background-color: transparent;
+   background: rgba(0,0, 0, 0.6);
+}
+
+form input[type=text]:focus
+{
+    background-color: beige;
 }
 
 .submit
