--- a/stylegame2.css
+++ b/stylegame2.css
@@ -107,7 +107,7 @@ margin-right: 120px;
 }
 
 .Rules{
-    background-image: url("imageswhite.png");
+    background-image: url("wallpaper1234.jpg");
     background-size: cover;
     margin-top: 150px;
 
