--- a/stylegame2.css
+++ b/stylegame2.css
@@ -87,7 +87,7 @@ margin-right: 120px;
 .button
 {  
   margin-top: 100px;
-  margin-left: 965px;  
+  margin-left: 785px;  
 }
 
 .btn{
@@ -107,7 +107,7 @@ margin-right: 120px;
 }
 
 .Rules{
-    background-image: url("wallpaper1234.jpg");
+    background-image: url("whitebg3.jpg");
     background-size: cover;
     margin-top: 150px;
 
