--- a/style2.css
+++ b/style2.css
@@ -18,20 +18,21 @@
 {
     color: white;
     text-decoration :none;
-    padding: 5px 20px;
+    padding: 5px 22px;
     font-family: "roboto", sans-serif;
     font-size: 17px;
+    margin-right: 15px;
 }
 
 .main-nav li.active a
 {
-    border: 2px solid white;
+    border: 1px solid white;
 
 }
 
 .main-nav li a:hover
 {
-    border: 2px solid white;
+    border: 1px solid white;
     background-color: orange;
 }
 
@@ -78,13 +79,15 @@ h1
 
 .grid
 {
-    position: relative;
-   background-color: blue;
+    
+   background-color: grey;
+   background: rgba(0,0, 0, 0.6);
+   opacity: 60%;
    border: 1px solid black;
-   width: 200px;
-   height: 200px;
-   margin: auto;
-   margin-right: 100px;
+   width: 800px;
+   height: 23px;
+   text-align: center;
+   padding: 20px 20px;
 }
 
 p
@@ -130,13 +133,14 @@ form input[type=text]
    box-sizing: border-box;
    border: 1px solid white;
    border-radius: 4px;
-   background-color: transparent;
-   background: rgba(0,0, 0, 0.6);
+   background-color: rgba(255,255, 255, 0.8);
+   
 }
 
 form input[type=text]:focus
 {
     background-color: beige;
+    background: rgba(0,0, 0, 0.6)
 }
 
 .submit
