--- a/style3.css
+++ b/style3.css
@@ -43,18 +43,24 @@
 }
 .transbox{
 
-    margin: 20px;
+    margin-left: 150px;
     margin-top: 0px;
     opacity: 0.6;
     background-color: black;
     filter: alpha(opacity=60);
+   opacity: 60%;
+   border: 1px solid black;
+   width: 25px;
+   height: 600px;
+   text-align: center;
+   padding: 20px 20px;
 }
 
 body{
     margin-top: 10px;
     background-repeat:no-repeat;
     background-position: center;
-    height: 100vh;
+    height: 110vh;
     background-size: cover;
     font-family: monospace;
 }
@@ -86,7 +92,7 @@ position: relative;
 top:3px;
 background: rgba(0, 0, 0, 0.6);
 font-family: Arial, Helvetica, sans-serif;
-margin-left: 0px;
+margin-left: 20px;
 display: block;
 }
 
@@ -99,7 +105,7 @@ form{
     font-family: Arial, Helvetica, sans-serif;
     display: block;
     float: center;
-    margin-right: 30px;
+    margin-right: 40px;
     color: white;
     font-size: 25px;
     margin-top: 60px;
@@ -110,17 +116,18 @@ form input[type=text]
 
    width: 20%;
    padding: 6px 16px;
-   margin: 8px 0;
+   margin: 8px;
    box-sizing: border-box;
    border: 1px solid white;
    border-radius: 4px;
    background-color: transparent;
-   background: rgba(0,0, 0, 0.6);
+   background: rgba(255, 255, 255, 0.8);
 }
 
 form input[type=text]:focus
 {
     background-color: beige;
+    background: rgba(255, 255, 255, 0.6);
 }
 
 .submit
@@ -133,7 +140,7 @@ form input[type=text]:focus
     color: white;
     padding: 10px 28px;
     text-decoration: none;
-    margin-left: 70px;
+    margin-left: 60px;
     font-family: "roboto", sans-serif;
     text-transform: uppercase;
 }
