--- a/style1.css
+++ b/style1.css
@@ -67,6 +67,7 @@ h1
  color: beige;
  font-size: 42px;
  font-family: cursive;
+ text-align: center;
  text-transform: capitalize;
  margin-top: 100px; 
  margin-left: 400px;  
