--- a/login test.css
+++ b/login test.css
@@ -18,7 +18,7 @@
 {
     color: white;
     text-decoration :none;
-    padding: 5px 22px;
+    padding: 8px 25px;
     font-family: "roboto", sans-serif;
     font-size: 17px;
 }
@@ -39,8 +39,15 @@
     width: 220px;
     height : auto;
     float: left;
-    margin-top: -40px;
+    margin-top: -32px;
     margin-left: -20px;
+}
+
+#inl
+{
+	width: 100px;
+	margin-top: 0px;
+	
 }
 
 body{
@@ -48,7 +55,9 @@ body{
 	background-size:cover;
 	font-family: sans-serif; 
 }
+
 .loginBox
+
 {
 	position:absolute;
 	top:55%;
@@ -58,10 +67,9 @@ body{
 	height:420px;
 	padding:80px 40px;
 	box-sizing: border-box;
-	background:rgba(0,0,0,0.5) ;
+	background:rgba(0,0,0,0.8) ;
 	
 }
-
 
 
 h2
