--- a/style login.css
+++ b/style login.css
@@ -9,9 +9,9 @@
     margin-top: 10px;
     margin-right: 30px;
 }
-.main-nav li{
+.main-nav li
+{
     display: inline-block;
-    
 }
 
 .main-nav li a
@@ -26,7 +26,6 @@
 .main-nav li.active a
 {
     border: 2px solid white;
-
 }
 
 .main-nav li a:hover
