--- a/style2.css
+++ b/style2.css
@@ -9,19 +9,19 @@
     margin-top: 0px;
     margin-right: 0px;
 }
-.main-nav li{
-    display: inline-block;
-    
+.main-nav li
+{
+    display: inline-block;    
 }
 
 .main-nav li a
 {
     color: white;
     text-decoration :none;
-    padding: 5px 22px;
+    padding: 10px 27px;
     font-family: "roboto", sans-serif;
     font-size: 17px;
-    margin-right: 15px;
+    margin-right: 17px;
 }
 
 .main-nav li.active a
@@ -41,8 +41,16 @@
     height : auto;
     float: left;
     margin-top: -42px;
-    margin-left: -44px;
+    margin-left: -18px;
 }
+
+#inl
+{
+    width: 110px;
+    margin-top: -12px;
+    margin-left: 3px;
+}
+
 .transbox{
 
     margin: 20px;
@@ -53,6 +61,7 @@
 }
 
 body{
+
     margin-top: 50px;
     height: 100vh;
     background-size: cover;
@@ -127,20 +136,21 @@ form{
 form input[type=text]
 {
 
-   width: 20%;
-   padding: 6px 16px;
+   width: 25%;
+   padding: 3px 10px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 1px solid white;
    border-radius: 4px;
-   background-color: rgba(255,255, 255);
+   background-color: rgba(255,255, 255, 0.8);
+   font-size: 21px;
    
 }
 
 form input[type=text]:focus
 {
     background-color: beige;
-    background: rgba(0,0, 0, 0.6)
+    background: rgba(255,255, 255, 0.7)
 }
 
 .submit
@@ -151,7 +161,7 @@ form input[type=text]:focus
     border: 1px solid white;
     background-color: transparent;
     color: white;
-    padding: 10px 28px;
+    padding: 12px 30px;
     text-decoration: none;
     margin-left: 0px;
     font-family: "roboto", sans-serif;
@@ -174,7 +184,7 @@ form input[type=text]:focus
 
 .btn{
     border: 1px solid white;
-    padding: 10px 30px;
+    padding: 12px 34px;
     color: white;
     text-decoration: none;
     margin-right: 5px;
