--- a/stylegame2.css
+++ b/stylegame2.css
@@ -18,7 +18,7 @@ header{
     float: right;
     list-style: none;
     margin-top: 30px;
-    margin-right: 18px;
+    margin-right: 20px;
 }
 .main-nav li
 {
@@ -96,8 +96,11 @@ margin-right: 95px;
 
 .button
 {  
+  display:flex;
+  justify-content:flex-end;
   margin-top: 100px;
-  margin-left: 785px;  
+  align-items: right;  
+  margin-right: 250px;
 }
 
 .btn{
@@ -117,19 +120,19 @@ margin-right: 95px;
 }
 
 .Rules{
-    background-image: url("whitebg3.jpg");
+    background-image: url("rules.jpg");
     background-size: cover;
-    margin-top: 150px;
+    
 
 }
 #rlist{
  
-margin-top: 180px;
-color: black;
+margin-top: 140px;
+color: white;
 margin-left: 80px;
 text-align: center;
 font-size: 60px;
-padding: 15px 15px;
+padding: 45px 5px;
 line-height: 30px;
 font-family: Arial, Helvetica, sans-serif;
 
@@ -147,7 +150,7 @@ font-family: Arial, Helvetica, sans-serif;
 .list{
 
 margin-top: 20px;
-color: black;
+color: white;
 text-align: left;
 font-size: 20px;
 padding: 15px 15px;
@@ -164,9 +167,9 @@ margin-right: 60px;
 }
 
 .nbtn{
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 15px 40px;
-    color: black;
+    color: white;
     text-decoration: none;
     margin-right: 5px;
     font-size: 15px;
