--- a/timer.css
+++ b/timer.css
@@ -1,3 +1,50 @@
+
+
+.main-nav{
+    float: center;
+    list-style: none;
+    margin-top: -5px;
+    
+
+}
+
+.main-nav li{
+    display: inline-block;
+    margin-left: 200px;
+}
+
+.timer{
+    font-size: 2vw;
+    margin-left: 50px;
+}
+.main-nav p
+{
+    color: white;
+    text-decoration :none;
+    padding: 8px 25px;
+    font-family: "roboto", sans-serif;
+    font-size: 25px;
+    text-align: center;
+    margin-left: 10px;
+}
+
+
+.logo img{
+    width: 200px;
+    height : auto;
+    float: left;
+    margin-top: -38px;
+    margin-left: 12px;
+}
+
+#inl
+{
+    width: 110px;
+    margin-top: -12px;
+    margin-left: 10px;
+}
+
+
 .leader{
     font-size: 20px;
     padding: 10px 10px;
