--- a/timer.css
+++ b/timer.css
@@ -28,9 +28,28 @@
     margin-left: 10px;
 }
 
-
-.logo img{
+.progress-bar
+{
     width: 200px;
+    height: 20px;
+    font-size: 18px;
+    background-color: aliceblue;
+    border-radius: 13px;
+    text-align: center;
+    color: black;
+}
+
+/*.progressbar
+{
+    width: 100px;
+    height: 10px;
+    background-color: aliceblue;
+    border-radius: 13px;
+    padding: 10px 10px;
+}
+*/
+.logo img{
+    width: 20px;
     height : auto;
     float: left;
     margin-top: -38px;
@@ -39,7 +58,7 @@
 
 #inl
 {
-    width: 110px;
+    width: 10px;
     margin-top: -12px;
     margin-left: 10px;
 }
