--- a/end.css
+++ b/end.css
@@ -90,6 +90,15 @@ h1
  margin-left: 80px;  
 }
 
+h4{
+ 
+ color: beige;
+ text-align: center;
+ font-size: 30px;
+ fo
+
+}
+
 .button
 {  
   margin-top: 30px;
