--- a/stylegame2.css
+++ b/stylegame2.css
@@ -5,7 +5,7 @@ html
 
 
 header{
-    height: 100vh;
+    height: 140vh;
     background-image: url("Untitled-1.jpg");
     background-size: cover;
     background-color: black;
@@ -76,7 +76,7 @@ h2
 text-align: right;
 font-size: 50px;
 text-transform: uppercase;
-margin-top: 160px; 
+margin-top: 140px; 
 margin-right: 155px;
 }
 
@@ -123,7 +123,7 @@ margin-right: 95px;
 }
 #rlist{
  
-margin-top: 30px;
+margin-top: 50px;
 color: white;
 margin-left: 80px;
 text-align: center;
@@ -159,6 +159,7 @@ margin-right: 60px;
 .button2
 {  
   margin-left: 500px;  
+  margin-bottom: 100px;
   
 }
 
