--- a/stylegame2.css
+++ b/stylegame2.css
@@ -118,7 +118,7 @@ margin-right: 95px;
 .Rules{
     background-image: url("rules.jpg");
     background-size: cover;
-   
+    height: 130%;
     width: 100%;
 
 }
